--- a/css/styles.css
+++ b/css/styles.css
@@ -1360,6 +1360,7 @@ body {
     line-height: normal;
     padding: 0 40px;
     text-align: right;
+    z-index: 5;
 }
 
 .text-banner__text-block a {
