--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -23,6 +23,9 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 body {
     background: #619f2d !important;
     /*background:  #F7F9FA !important;*/
+}
+
+html, body {
     overflow-x: hidden;
 }
 
@@ -33,7 +36,7 @@ body {
 }
 
 .logo img {
-    width: 175px;
+    width: 130px;
 }
 
 .head__container .wrap {
@@ -68,7 +71,7 @@ body {
 }
 
 .head__search {
-    width: 100px;
+    width: 70px;
 }
 
 .search-form {
